<resources>
    <string name="app_name">PetagramFragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="app_name2">Petagram</string>
    <string name="contacto">Contacto</string>
    <string name="acerca_de">Acerca de</string>
    <string name="tvcontacto">Contacto</string>
    <string name="tvacerca_de">Acerca de</string>

    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pcount">count</string>
    <string name="search">Buscar</string>
    <string name="settings">Settings</string>
    <string name="asunto">Asunto</string>
    <string name="email">Correo Electrónico</string>
    <string name="mensaje_contacto">Mensaje</string>
    <string name="enviar_mensaje">Enviar comentario</string>
    <string name="titulo1">Desarrollador</string>
    <string name="titulo2">Oscar Andrés Cruz Torres</string>
    <string name="descripcion">Ingeniero de mercados, Especialista en desarrollo social y gestión de proyectos. Colombiano, aprendiendo a desarrollar aplicaciones en Android Studio.</string>
    <string name="snow">Snow</string>
</resources>