<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/miToolbar"
        tools:ignore="MissingConstraints"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width = "250dp"
            android:layout_height = "wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                tools:ignore="UseCompoundDrawables"
                >

                <ImageView
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:src = "@drawable/asset_footprint" />
                <TextView
                    android:id = "@+id/name"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_marginLeft = "10dp"
                    android:text = "@string/app_name2"
                    android:textSize = "20sp"
                    android:textColor = "#000"
                    android:textStyle = "bold"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/btnStar"
                    android:layout_width = "wrap_content"
                    android:layout_height = "match_parent"
                    android:src = "@drawable/asset__star"
                    android:layout_gravity="end"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"

                />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilAsunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/asunto"

                />
        </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mensaje_contacto"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/boton_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar_mensaje"
            />


    </LinearLayout>

</LinearLayout>