<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDe"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/miToolbar"
        tools:ignore="MissingConstraints"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width = "250dp"
            android:layout_height = "wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                tools:ignore="UseCompoundDrawables"
                >

                <ImageView
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:src = "@drawable/asset_footprint" />
                <TextView
                    android:id = "@+id/name"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_marginLeft = "10dp"
                    android:text = "@string/app_name2"
                    android:textSize = "20sp"
                    android:textColor = "#000"
                    android:textStyle = "bold"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/btnStar"
                    android:layout_width = "wrap_content"
                    android:layout_height = "match_parent"
                    android:src = "@drawable/asset__star"
                    android:layout_gravity="end"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo1"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/foto_oscar"
            app:civ_border_color="#3f51b5"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10dp"
            app:civ_shadow_color="#3f51b5"
            android:layout_gravity="center_horizontal"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo2"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textAlignment="center"
            />
    </LinearLayout>

</LinearLayout>